--- a/.github/workflows/git_repository_creation.yml
+++ b/.github/workflows/git_repository_creation.yml
@@ -1,3 +1,7 @@
+name: Git Repo creation
+
+on:
+  workflow_dispatch:
 env:
   ORG_TOKEN: ${{ secrets.ORG_TOKEN }}
   #SOME_SECRET: some-secret-value
